as/as-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokyomap-oauth-service
spec:
  selector:
    app: tokyomap-oauth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
