as/as-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-ingress
  annotations:
    # Force HTTP requests to redirect to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  # Enable HTTPS (TLS) for the specified host using Minikube's fake certificate
  tls:
  - hosts:
    - as.localhost
  rules:
  - host: as.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tokyomap-oauth-service
            port:
              number: 8080
